--- a/app/index.html
+++ b/app/index.html
@@ -84,6 +84,8 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/factories/categories.js"></script>
+
         <!-- endbuild -->
 </body>
 </html>
