--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
+    <link rel="stylesheet" href="bower_components/Materialize/bin/materialize.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -28,7 +29,9 @@
     <!-- Add your site or application content here -->
 
 
+
     <div ng-view=""></div>
+
 
 
 
@@ -54,7 +57,7 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
-    <script src="bower_components/Materialize/dist/js/materialize.min.js"></script>
+    <script src="bower_components/Materialize/bin/materialize.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
